--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 70px;
             position: absolute;
             bottom: 120px;
-            background-image: url(../Web_SS/car-removebg-preview.png); 
+            background-image: url(./Assets/car-removebg-preview.png); 
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
@@ -28,7 +28,7 @@
             height: 80px;
             position: absolute;
             bottom: 120px;
-            background-image: url(../Web_SS/Car2.png); 
+            background-image: url(./Assets/Car2.png); 
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
